<resources>
    <string name="app_name">Funumber</string>
    <string name="random_facts_about_numbers">Random facts about numbers:</string>
    <string name="math">Math</string>
    <string name="date">Date</string>
    <string name="year">Year</string>
    <string name="trivia">Trivia</string>
    <string name="update_facts">Update facts</string>
    <string name="math_initial_fact">5 is the number of platonic solids.</string>
    <string name="date_initial_fact">May 29th is the day in 1954 that First of the annual Bilderberg conferences</string>
    <string name="year_initial_fact">1211 is the year that John of England sends a gift of herrings to nunneries in almost every shire despite his status as an excommunicant.</string>
    <string name="trivia_initial_fact">42 is the number of little squares forming the left side trail of Microsoft\'s Windows 98 logo.</string>
</resources>